--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @layer base {
   body {
@@ -15,17 +15,5 @@
 
   .active {
     @apply bg-purple-600 text-white rounded-xl;
-  }
-
-  .configInputContainer {
-    @apply flex flex-col gap-2 w-full;
-  }
-
-  .configInputField {
-    @apply border-1 border-gray-300 p-2 rounded-lg text-sm w-full;
-  }
-
-  .configInputTitle {
-    @apply text-gray-600 text-sm;
   }
 }
